feat: performance and quality